test/resources/parser/failing/testSeqSemi1.scala
object TrailingSemicolon {
  1; 2; 3;
}